[package]
name = "late-cli"
version = "0.1.0"
edition = "2024"

[features]
default = []
otel = []

[[bin]]
name = "late"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
cpal = "0.16"
crossterm = "0.29"
futures-util = "0.3"
nix = { version = "0.29.0", features = ["term", "process", "signal", "fs"] }
reqwest = { workspace = true, features = ["blocking"] }
rustfft = "6.4.1"
shlex = "1.3.0"
symphonia = { version = "0.5.5", features = ["mp3"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
